@@ -22,7 +22,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
@@ -42,8 +43,7 @@ class PlacementSubmittedControllerTest extends AbstractControllerTest {
     @MockBean
     private CoreCaseDataService coreCaseDataService;
 
-    private static final Long CASE_ID = 12345L;
-    private static final String CASE_REFERENCE = "12345";
+    private static final Long CASE_ID = 123456L;
     private static final String RESPONDENT_SURNAME = "Watson";
     private static final String LOCAL_AUTHORITY_CODE = "example";
     private static final String SEND_DOCUMENT_EVENT = "internal-change:SEND_DOCUMENT";
@@ -59,15 +59,14 @@ class PlacementSubmittedControllerTest extends AbstractControllerTest {
         Element<Child> child1 = testChild();
         Element<Child> child2 = testChild();
 
-        DocumentReference child1Application = testDocument();
-        DocumentReference child2Application = testDocument();
-
-        Element<Placement> child1Placement = element(testPlacement(child1, child1Application));
-        Element<Placement> child2Placement = element(testPlacement(child2, child2Application));
+        Element<Placement> child1Placement = element(testPlacement(child1, testDocument()));
+        Element<Placement> child2Placement = element(testPlacement(child2, testDocument()));
 
         CallbackRequest callbackRequest = CallbackRequest.builder()
             .caseDetails(CaseDetails.builder()
                 .id(CASE_ID)
+                .jurisdiction("PUBLICLAW")
+                .caseTypeId("CARE_SUPERVISION_EPO")
                 .data(ImmutableMap.<String, Object>builder()
                     .putAll(buildNotificationData())
                     .putAll(buildPlacementData(List.of(child1, child2), List.of(child2Placement, child1Placement),
@@ -79,39 +78,41 @@ class PlacementSubmittedControllerTest extends AbstractControllerTest {
 
         postSubmittedEvent(callbackRequest);
 
-        verify(notificationClient).sendEmail(
-            eq(NEW_PLACEMENT_APPLICATION_NOTIFICATION_TEMPLATE), eq("admin@family-court.com"),
-            eq(expectedTemplateParameters()), eq(CASE_REFERENCE));
-        verify(coreCaseDataService).triggerEvent(null, null, CASE_ID, SEND_DOCUMENT_EVENT, Map.of(
-            "documentToBeSent", documentReference
-        ));
+        verify(notificationClient).sendEmail(NEW_PLACEMENT_APPLICATION_NOTIFICATION_TEMPLATE,
+            "admin@family-court.com",
+            expectedTemplateParameters(),
+            String.valueOf(CASE_ID));
+        verify(coreCaseDataService).triggerEvent("PUBLICLAW",
+            "CARE_SUPERVISION_EPO",
+            CASE_ID,
+            SEND_DOCUMENT_EVENT,
+            Map.of("documentToBeSent", documentReference));
     }
 
     @Test
     void shouldNotSendANotificationWhenUploadingPreviousChildPlacement() throws Exception {
         Element<Child> child1 = testChild();
-        DocumentReference child1Application = testDocument();
-        Element<Placement> child1Placement = element(testPlacement(child1, child1Application));
+        Element<Placement> child1Placement = element(testPlacement(child1, testDocument()));
+        CaseDetails unchangedCaseDetails = CaseDetails.builder()
+            .id(CASE_ID)
+            .jurisdiction("PUBLICLAW")
+            .caseTypeId("CARE_SUPERVISION_EPO")
+            .data(buildPlacementData(List.of(child1), List.of(child1Placement), child1.getId()))
+            .build();
 
         CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .id(CASE_ID)
-                .data(buildPlacementData(List.of(child1), List.of(child1Placement), child1.getId()))
-                .build())
-            .caseDetailsBefore(CaseDetails.builder()
-                .id(CASE_ID)
-                .data(buildPlacementData(List.of(child1), List.of(child1Placement), child1.getId()))
-                .build())
+            .caseDetails(unchangedCaseDetails)
+            .caseDetailsBefore(unchangedCaseDetails.toBuilder().build())
             .build();
 
         postSubmittedEvent(callbackRequest);
 
-        verify(notificationClient, never()).sendEmail(
-            eq(NEW_PLACEMENT_APPLICATION_NOTIFICATION_TEMPLATE), eq("admin@family-court.com"),
-            eq(expectedTemplateParameters()), eq(CASE_REFERENCE));
-        verify(coreCaseDataService).triggerEvent(null, null, CASE_ID, SEND_DOCUMENT_EVENT, Map.of(
-            "documentToBeSent", documentReference
-        ));
+        verify(notificationClient, never()).sendEmail(anyString(), any(), any(), any());
+        verify(coreCaseDataService).triggerEvent("PUBLICLAW",
+            "CARE_SUPERVISION_EPO",
+            CASE_ID,
+            SEND_DOCUMENT_EVENT,
+            Map.of("documentToBeSent", documentReference));
     }
 
     private Map<String, Object> buildPlacementData(List<Element<Child>> children,
@@ -125,14 +126,14 @@ class PlacementSubmittedControllerTest extends AbstractControllerTest {
     }
 
     private Map<String, Object> expectedTemplateParameters() {
-        return ImmutableMap.of(
+        return Map.of(
             "respondentLastName", RESPONDENT_SURNAME,
-            "caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345"
+            "caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, CASE_ID)
         );
     }
 
     private Map<String, Object> buildNotificationData() {
-        return ImmutableMap.of(
+        return Map.of(
             "caseLocalAuthority", LOCAL_AUTHORITY_CODE,
             "respondents1", List.of(
                 ImmutableMap.of(
